[gd_scene load_steps=7 format=3 uid="uid://cf8v77spj0qii"]

[ext_resource type="Script" path="res://dev_tabs/root.gd" id="1_527f6"]
[ext_resource type="Theme" uid="uid://lfn137rvcqs6" path="res://dev_tabs/disabled_panel_bg.tres" id="2_upsdm"]
[ext_resource type="Script" path="res://dev_tabs/tabs.gd" id="3_2x37h"]
[ext_resource type="Script" path="res://dev_tabs/tab_splitter.gd" id="4_mecg8"]
[ext_resource type="Script" path="res://dev_tabs/editor.gd" id="5_b7r6v"]
[ext_resource type="PackedScene" uid="uid://1av4nnxgw4sq" path="res://dev_tabs/drop_down/drop_down.tscn" id="6_ghe41"]

[node name="root" type="Control" groups=["root"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_527f6")

[node name="game" type="Node2D" parent="."]
position = Vector2(-22, -42)

[node name="game_area" type="Control" parent="."]
top_level = true
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="canvas" type="CanvasLayer" parent="."]

[node name="tabs" type="TabContainer" parent="canvas"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_upsdm")
current_tab = 1
script = ExtResource("3_2x37h")

[node name="game" type="Control" parent="canvas/tabs"]
visible = false
clip_contents = true
layout_mode = 2
theme = ExtResource("2_upsdm")
metadata/_tab_index = 0

[node name="notes" type="TabBar" parent="canvas/tabs"]
layout_mode = 2
metadata/_tab_index = 1

[node name="tab_bg" type="ColorRect" parent="canvas/tabs/notes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.230315, 0.230315, 0.230315, 1)

[node name="tab_splitter" type="HSplitContainer" parent="canvas/tabs/notes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_mecg8")

[node name="editor" type="VBoxContainer" parent="canvas/tabs/notes/tab_splitter"]
layout_mode = 2
script = ExtResource("5_b7r6v")

[node name="current_document" type="Label" parent="canvas/tabs/notes/tab_splitter/editor"]
layout_mode = 2

[node name="tools" type="HBoxContainer" parent="canvas/tabs/notes/tab_splitter/editor"]
layout_mode = 2

[node name="new" type="Button" parent="canvas/tabs/notes/tab_splitter/editor/tools"]
layout_mode = 2
text = "New"

[node name="open" type="Button" parent="canvas/tabs/notes/tab_splitter/editor/tools"]
layout_mode = 2
text = "Open"

[node name="save" type="Button" parent="canvas/tabs/notes/tab_splitter/editor/tools"]
layout_mode = 2
text = "Save"

[node name="drop_down" parent="canvas/tabs/notes/tab_splitter/editor/tools" instance=ExtResource("6_ghe41")]
layout_mode = 2
save_path = "user://recent_files.txt"
type = "recent_files"

[node name="text" type="TextEdit" parent="canvas/tabs/notes/tab_splitter/editor"]
layout_mode = 2
size_flags_vertical = 3

[node name="notes" type="VBoxContainer" parent="canvas/tabs/notes/tab_splitter"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="canvas/tabs/notes/tab_splitter/notes"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="canvas/tabs/notes/tab_splitter/notes"]
layout_mode = 2

[node name="dialogs" type="Node" parent="."]

[node name="editor_open_dialog" type="FileDialog" parent="dialogs"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(680, 455)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="editor_save_dialog" type="FileDialog" parent="dialogs"]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(527, 180)
access = 2

[node name="editor_unsaved_dialog" type="ConfirmationDialog" parent="dialogs"]
unique_name_in_owner = true
title = "Caution! Unsaved changes!"
initial_position = 2
size = Vector2i(620, 100)
ok_button_text = "Yes"
dialog_text = "There are unsaved changes in the Editor, do you want to save before proceed?"
cancel_button_text = "No"

[connection signal="tab_changed" from="canvas/tabs" to="canvas/tabs" method="_on_tab_changed"]
[connection signal="tab_changed" from="canvas/tabs/notes" to="canvas/tabs" method="_on_notes_tab_changed"]
[connection signal="dragged" from="canvas/tabs/notes/tab_splitter" to="canvas/tabs/notes/tab_splitter" method="_on_dragged"]
[connection signal="pressed" from="canvas/tabs/notes/tab_splitter/editor/tools/new" to="canvas/tabs/notes/tab_splitter/editor" method="_on_new_pressed"]
[connection signal="pressed" from="canvas/tabs/notes/tab_splitter/editor/tools/open" to="canvas/tabs/notes/tab_splitter/editor" method="_on_open_pressed"]
[connection signal="pressed" from="canvas/tabs/notes/tab_splitter/editor/tools/save" to="canvas/tabs/notes/tab_splitter/editor" method="_on_save_pressed"]
[connection signal="drop_button_pressed" from="canvas/tabs/notes/tab_splitter/editor/tools/drop_down" to="canvas/tabs/notes/tab_splitter/editor" method="_on_drop_down_drop_button_pressed"]
[connection signal="text_changed" from="canvas/tabs/notes/tab_splitter/editor/text" to="canvas/tabs/notes/tab_splitter/editor" method="_on_text_text_changed"]
[connection signal="canceled" from="dialogs/editor_open_dialog" to="canvas/tabs/notes/tab_splitter/editor" method="_on_file_dialog_canceled"]
[connection signal="file_selected" from="dialogs/editor_open_dialog" to="canvas/tabs/notes/tab_splitter/editor" method="_on_file_dialog_file_selected"]
[connection signal="canceled" from="dialogs/editor_save_dialog" to="canvas/tabs/notes/tab_splitter/editor" method="_on_save_dialog_canceled"]
[connection signal="file_selected" from="dialogs/editor_save_dialog" to="canvas/tabs/notes/tab_splitter/editor" method="_on_save_dialog_file_selected"]
[connection signal="canceled" from="dialogs/editor_unsaved_dialog" to="canvas/tabs/notes/tab_splitter/editor" method="_on_unsaved_changes_canceled"]
[connection signal="confirmed" from="dialogs/editor_unsaved_dialog" to="canvas/tabs/notes/tab_splitter/editor" method="_on_unsaved_changes_confirmed"]
